Day18/assets/css/style.css
:root {
  --black-900: #252525;
  --black-600: #333333;
  --black-300: #4f4f4f;
  --black-100: #909090;
  --white-900: #ffffff;

  /* Container */
  --max-width: 1280px;
}

*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: var(--white-900);
  color: var(--black-900);
  font-family: 'Times New Roman', Times, serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.5;
  min-height: 100vh;
}

main {
  max-width: var(--max-width);
  margin-inline: auto;
  display: flex;
  flex-direction: column;
  gap: 72px;
  margin-block-start: 4rem;
}

main .content {
  display: flex;
  gap: 16px;
}

@media (max-width: 960px) {
  main .content {
    flex-direction: column;
  }
}

main .content .shapes-left,
main .content .shapes-right {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 56px;
}

main .content .shapes-left .circle-text {
  width: 173px;
  height: 173px;
}

main .content .middle {
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

main .content .middle h1 {
  font-size: clamp(3.75rem, 3.4859rem + 1.1268vw, 4.5rem);
  line-height: 1.2;
}

main .content .middle p {
  font-size: clamp(1rem, 0.8239rem + 0.7512vw, 1.5rem);
  text-wrap: balance;
}

main .content .middle button {
  background-color: var(--black-900);
  color: var(--white-900);
  font-family: 'Poppins', sans-serif;
  font-size: clamp(1rem, 0.8239rem + 0.7512vw, 1.5rem);
  padding: 1rem 2rem;
  line-height: 1.2;
  margin-inline: auto;
  border: none;
  border-radius: 2rem;
  cursor: pointer;
  width: fit-content;
  transition: all 0.3s ease-in-out;
}

main .content .middle button:focus,
main .content .middle button:hover {
  background-color: var(--black-300);
}

.images-container {
  display: grid;
  gap: 1rem;
  grid-template-columns: minmax(120px, 0.6fr) 1fr 1.1fr 1fr minmax(120px, 0.6fr);
  grid-template-rows: repeat(2, minmax(200px, 10vw));
  grid-template-areas:
    'textleft image1 image2 image3 image4'
    'image5 image6 image2 image7 textright';
}

@media (max-width: 960px) {
  .images-container {
    grid-template-columns: repeat(4, 1fr);
    grid-template-areas:
      'image1 image7 image7 image7'
      'image3 image3 image4 image4'
      'image5 image5 image6 image6'
      'image5 image5 image2 image2';
    grid-auto-rows: minmax(200px, 10vw);
  }

  .text-left,
  .text-right {
    display: none;
  }
}

@media (max-width: 768px) {
  .images-container {
    grid-template-areas:
      'image1'
      'image2'
      'image3'
      'image4'
      'image5'
      'image6'
      'image7';

    grid-template-columns: 1fr;
    grid-template-rows: repeat(7, minmax(200px, 60vw));
  }
}

.images-container img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 1rem;
}

.text-left {
  grid-area: textleft;
}

.text-right {
  grid-area: textright;
  align-self: flex-end;
  margin-left: auto;
}

.text-left p,
.text-right p {
  font-size: clamp(1rem, 0.8239rem + 0.7512vw, 1.5rem);
  line-height: 1.2;
  font-style: italic;
}

.text-left::after,
.text-right::after {
  content: '';
  display: inline-block;
  width: 100%;
  height: 6px;
  background-color: var(--black-900);
  margin-block-start: 2rem;
}

.images-container .image1 {
  grid-area: image1;
}

.images-container .image2 {
  grid-area: image2;
}

.images-container .image3 {
  grid-area: image3;
}

.images-container .image4 {
  grid-area: image4;
  transform: translateY(30px);
}

.images-container .image5 {
  grid-area: image5;
  transform: translateY(-30px);
}

@media (max-width: 960px) {
  .images-container .image4,
  .images-container .image5 {
    transform: none;
  }
}

.images-container .image6 {
  grid-area: image6;
}

.images-container .image7 {
  grid-area: image7;
}

